--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div style="width: 100%;" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
